--- a/commands/kick.js.example
+++ b/commands/kick.js.example
@@ -2,6 +2,7 @@ module.exports = {
 	name: 'kick',
 	description: 'Kick the specified user from the guild.',
 	execute(message) {
+            const role = message.guild.roles.find(r => r.name === ["administrator_role_here","server_owner_role_here"]);
 			const member = message.mentions.members.first()
 				
 			if (!member) {
